--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,33 @@
-.App {
-  text-align: center;
+.search-input-wrapper {
+  max-width: 600px;
+  width: 100%;
+  margin: 0 auto;
+  position: relative;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.search {
+  display: block;
+  width: 100%;
+  height: 40px;
+  border: 2px solid black;
+  position: relative;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.results ul {
+  position: absolute;
+  top: 0;
+  left: 0;
+  margin-top: 40px;
+  height: 400px;
+  overflow: scroll;
+  width: 100%;
+  padding: 0;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.results ul li {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  height: 80px;
+  padding: 10px;
+  border-bottom: 1px solid rgba(0,0,0,.1);
 }
